2005-08-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/sun_map_tok.l: allocate more output slots so lex scanners
	don't run out of memory.

	* amd/sun_map_parse.y: declare extern for sun_map_parse().

	* libamu/xutil.c (xsnprintf): ensure proper comparisons between
	signed and unsigned quantities.

2005-08-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/util.c, amd/autil.c (strsplit): moved strsplit() function
	from Amd code to to libamu, so sun2amd could use it.

	* amd/Makefile.am (sbin_PROGRAMS): build sun2amd binary and man
	page.
	(EXTRA_sun2amd_OBJECTS): sun2amd needs to link with all info_*.c files

	* amd/sun2amd.8: placeholder for man page.

	* amd/sun2amd.c: placeholder for C version of translator from Sun
	syntax maps to Amd maps.

	* */*.[0-9]: include file name in nroff source comment.

	* ALL: use '0' properly when assigning or passing it to functions.
	If in the context pointer, use NULL.  If in the context of a
	single char (say within a string), the use '\0'.  This is just to
	make the code clearer.

	* m4/macros/header_templates.m4: template for HAVE_MAP_SUN.

	* amd/mapc.c (maptypes): add placeholder for Sun-syntax map
	methods.

	* amd/Makefile.am (EXTRA_amd_SOURCES): compile info_sun.c

	* amd/info_sun.c: placeholder for meta info parser to get info
	from Sun automount-style /etc/auto_master, possibly following
	into multiple info services (via /etc/nsswitch.conf).

	* libamu/xutil.c (xsnprintf): if vsnprintf truncated the output
	string to avoid an overflow, print an error.  Include some code to
	break out any possible infinite loop between plog() and
	xsnprintf().
	(real_plog): now we can use (carefully) xsnprintf() directly.

	* amd/sun_map.[hc]: cleanup and formatting.

	* amd/sun_map_parse.y: to match the literal string "fstype=" use
	double quotes, not single quotes.

	* amd/get_args.c (get_args): call conf_parse() using conf_in.

	* amd/amd.h: use renamed parser symbols (yyparse -> conf_parse;
	yyin -> conf_in).
