@@ -1,3 +1,12 @@
+2005-08-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>
+
+	* amd/sun_map_tok.l: Applied some definition goop to handle the
+	ECHO symbol that lex defines.  This symbol causes problems on
+	RedHat-EL-powerPC platforms.  Replaced strncpy with strlcpy.
+	Renamed the function sun_map_yyinput to sun_map_input.  This
+	function is a utility function that is not generated by lex.
+	Therefore, the 'yy' may cause confusion.
+
 2005-08-08  Erez Zadok  <ezk@cs.sunysb.edu>
 
 	* amd/sun_map_tok.l: allocate more output slots so lex scanners
@@ -11455,3 +11464,5 @@ Wed Dec 10 22:19:29 1996  Erez "HWank1" Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 	*******************************************************************
 	*** Initial ChangeLog Entry					***
 	*******************************************************************
+	 LocalWords:  Erez
+	
